Fixes recovery, user race and audit hack. Update to v0.7.0
